[fix]getCourseListBySubjectAndField() hashmap 중복 키값 병합 로직 추가